fixed image of fuzzyfox being too big. added navigation and removed results page. minor fixes and code cleanup.

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-body , html {
+body,
+html {
     background-color: #eee;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
@@ -8,12 +9,24 @@ body , html {
     overflow-x: hidden;
 }
 
+#back,
+#result,
+#rep_image {
+    display: none;
+}
+
 section[role="region"] {
     padding-bottom: 1rem;
 }
 
 #rep_names {
     padding-top: 1rem;
+}
+
+#rep_names,
+#mode_selector {
+    position: absolute;
+    bottom: 3rem;
 }
 
 section[role="status"] {
@@ -40,7 +53,8 @@ button {
     box-shadow: 1px 1px 4px #444;
 }
 
-#rep_quiz, #quiz_result {
+#rep_quiz,
+#quiz_result {
     display: none;
 }
 
@@ -49,10 +63,19 @@ button {
     color: #666;
 }
 
-h2#right {
+.right {
     color: green;
 }
 
-h2#wrong {
+.wrong {
     color: red;
+}
+
+#result {
+    font-size: 1.5rem;
+    height: 3rem;
+    line-height: 3rem;
+    margin-top: 0.5rem;
+    font-weight: bold;
+    background: url("../shared/style/status/images/ui/pattern.png") repeat scroll left top #404040;
 }
